导出图片，多语言支持

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.2.1",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/html2canvas": "^0.5.35",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
